Fix zero button text alignment

--- a/styles.css
+++ b/styles.css
@@ -54,4 +54,6 @@ button {
 .zero {
     width: 138px;
     border-radius: 32px;
+    text-align: left;
+    padding-left: 22px;
 }
